<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity" >

    <TextView
        android:id="@+id/user_profile_activity_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/user_profile_activity_username_label" />
    <TextView
        android:id="@+id/user_profile_activity_username_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/empty_string" />
    
    <TextView
        android:id="@+id/user_profile_activity_reputation_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_activity_username_label"
        android:layout_centerHorizontal="true"
        android:text="@string/user_profile_activity_reputation_points_label" />

        <TextView
        android:id="@+id/user_profile_activity_reputation_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_activity_username_user"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_string" />
        
    <TextView
        android:id="@+id/user_profile_activity_past_projects_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_profile_activity_reputation_points_label"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="28dp"
	    android:text="@string/user_profile_activity_past_projects_label" />

    <ImageView
        android:id="@+id/user_profile_activity_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_profile_activity_past_projects_label"
        android:layout_alignTop="@+id/user_profile_activity_username_label"
        android:contentDescription="@+id/user_profile_activity_user_image"
        android:src="@android:drawable/ic_menu_myplaces" />

    <LinearLayout
        android:id="@+id/user_profile_past_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/user_profile_activity_past_projects_label"
        android:layout_marginLeft="28dp" />

</RelativeLayout>