<?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
 
  <LinearLayout 
        android:id="@+id/plinearOuter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal" >
         <Button
        android:id="@+id/change"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/button_marginB"
        android:layout_marginLeft="@dimen/button_marginL"
        android:layout_marginRight="@dimen/button_marginR"
        android:layout_marginTop="@dimen/button_marginT"
        android:background="@drawable/custom_button_blue"
        android:text="@string/change_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/small_button_text_size"
        android:onClick="changeBack" />  
   <Button
        android:id="@+id/pcommit"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="@dimen/button_marginB"
        android:layout_marginLeft="@dimen/button_marginL"
        android:layout_marginRight="@dimen/button_marginR"
        android:layout_marginTop="@dimen/button_marginT"
        android:background="@drawable/custom_button_blue"
        android:text="@string/commit_button"
        android:layout_gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/small_button_text_size"
        android:onClick="commitProject"  />
 
  </LinearLayout>

	<RelativeLayout
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/pproject_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" 
        android:textIsSelectable="true"/>
      
     <ImageView
            android:id="@+id/pprofile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/pproject_name" />
     
    <TextView
        android:id="@+id/pprojectDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pprofile_image"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/grey"
         android:text="@string/Project_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="left" />

    <TextView
        android:id="@+id/pproject_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pprojectDescription"
        android:textIsSelectable="true" />

     <TextView
        android:id="@+id/psteps"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pproject_description"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/grey"
        android:text="@string/Steps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:gravity="left"  />
    
    <ListView
        android:id="@+id/pstepsList"
         android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/psteps"
        android:layout_alignTop="@id/linearOuter"
        android:columnWidth="90dp"
        android:gravity="left"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

	</RelativeLayout>
</RelativeLayout>
      
